# usps-addresses-sdk

./: Cargo.toml  GENERATE.md  README.md  US_Postal_Service-addresses-3.0.2-resolved_1.yaml
.openapi-generator/: FILES
docs/: Address.md  AddressAdditionalInfo.md  AddressAdditionalInfoBusiness.md  AddressAdditionalInfoCentralDeliveryPoint.md  AddressAdditionalInfoDpvConfirmation.md  AddressAdditionalInfoDpvcmra.md  AddressAdditionalInfoVacant.md  AddressCorrectionsInner.md  AddressMatchesInner.md  AddressResponse.md  CityAndState.md  CityStateResponse.md  DomesticAddress.md  ErrorMessage.md  ErrorMessageError.md  ErrorMessageErrorErrors.md  ErrorMessageErrorSource.md  ResourcesApi.md  ZipCodeResponse.md
src/apis/: configuration.rs  mod.rs  resources_api.rs
src/models/: address.rs  address_additional_info.rs  address_additional_info_business.rs  address_additional_info_central_delivery_point.rs  address_additional_info_dpv_confirmation.rs  address_additional_info_dpvcmra.rs  address_additional_info_vacant.rs  address_corrections_inner.rs  address_matches_inner.rs  address_response.rs  city_and_state.rs  city_state_response.rs  domestic_address.rs  error_message.rs  error_message_error.rs  error_message_error_errors.rs  error_message_error_source.rs  mod.rs  zip_code_response.rs
tests/: address_tests.rs
